<resources>
    <string name="app_name">ParkShare</string>
    <string name="main_searchbar_hint">Where to park?</string>
    <string name="menu_button">Menu</string>
    <string name="myaccount_button">MyAccount</string>
    <string name="mypostings_button">MyPostings</string>
    <string name="myrents_button">MyRents</string>
    <string name="logout_button">Logout</string>
    <string name="post_button">Post Spot</string>
    <string name="titleText">My Account</string>
    <string name="dialogPassText">Update Password</string>
    <string name="currentpass_hint">Current Password</string>
    <string name="newpass_hint">New Password</string>
    <string name="updatePass">Update Password</string>
    <string name="dialogUserText">Update Username</string>
    <string name="currentuser_hint">Current Username</string>
    <string name="newuser_hint">New Username</string>
    <string name="updateUser">Update Username</string>
    <string name="buttonLogout">Logout</string>
    <string name="textViewUsername">Username:</string>
    <string name="textViewPassword">Password:</string>
    <string name="buttonResetUser">Reset Username</string>
    <string name="buttonResetPass">Reset Password</string>
    <string name="LoginText">Login</string>
    <string name="LoginNameHint">Enter username</string>
    <string name="PasswordText">Password</string>
    <string name="creationuser">Choose a username</string>
    <string name="creationpass">Choose a password</string>
    <string name="creationbut">Create Account</string>
    <string name="streetAddressText">Street address:</string>
    <string name="cityText">City:</string>
    <string name="provinceText">Province:</string>
    <string name="phoneNumberText">Phone number:</string>
    <string name="emailText">Email:</string>
    <string name="addressHintText">123 Streetname Road</string>
    <string name="phoneHintText">XXX-XXX-XXXX</string>
    <string name="emailHintText">johndoe@domain.com</string>
    <string name="postButtonText">Post</string>
    <string name="cityHintText">Enter city here</string>
    <string name="provinceHintText">Enter province here</string>
    <string name="selectAvailabilityButtonText">Select Availability</string>
    <string name="doneCalendar">Done</string>
    <string name="cancelCalendar">Cancel</string>
    <string name="currentlySelectedDate"></string>
    <string name="authors_names_text">Authors: Robert Goss, Timothy Mihet, Sourav Pandya, Janelle Tait and Dayton Talarico</string>
    <string name="activity_version_number_text">Version 1.0</string>
    <string name="instructions_text">Add instructions here...</string>
    <integer name="playservicesversion">49</integer>
</resources>