<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:columnCount="1"
    android:rowCount="2"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/myaccountbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/myaccount_button"
        android:onClick="MyAccountClicked"/>

    <Button
        android:id="@+id/mypostingsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/mypostings_button"
        android:onClick="MyPostingsClicked"/>

    <Button
        android:id="@+id/myrentsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/myrents_button"
        android:onClick="MyRentsClicked"/>

    <Button
        android:id="@+id/logoutbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/logout_button"
        android:onClick="LogoutClicked"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</GridLayout>