<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/FirstNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="First Name"></TextView>

    <EditText
        android:id="@+id/FirstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>

    <TextView
        android:id="@+id/LastNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Last Name"></TextView>

    <EditText
        android:id="@+id/LastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>

    <TextView
        android:id="@+id/PhoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Phone Number"></TextView>

    <EditText
        android:id="@+id/PhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"></EditText>

    <TextView
        android:id="@+id/LoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creationuser"></TextView>

    <EditText
        android:id="@+id/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/LoginNameHint"
        android:inputType="textEmailAddress"></EditText>

    <TextView
        android:id="@+id/PasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creationpass"></TextView>

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"></EditText>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creationbut"></Button>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>